Fix deprecated items and update readme