@@ -12,71 +12,28 @@
 4. Create scripted animations (experimental)
 5. Extensible design allows adding new widgets
 
-## Compatibility
+## Usage
 
-The latest version of J3, `2.x`, supports Java 17 and newer.  It requires installing the JavaFX runtime separately
-and Gluon / GraalVM for native compilation.
+J3 is a Java application built using JavaFX.  We recommend installing a version of Java with JavaFX built-in,
+such as [Zulu](https://www.azul.com/downloads).  Pick `JDK FX" under the Java Package filter.  Java 17 or newer
+is required.
 
-The older versions of J3, `1.x`, require Java 8.  The `1.x` versions are no longer supported.
+### Running from Source
 
-## Compiling
+If using Eclipse, run the class `j3.GUI` directly or create a new Maven run configuration with
+the goal `javafx:run`.
 
-There are a few options for running J3 that have different requirements.  These build steps are tested on Windows but
-should be similar on other platforms.
+If using Maven, run `mvn javafx:run`.
 
-### Prerequisites
+### Building Native Programs
 
-1. Download and install [Maven](https://maven.apache.org/).  Set the `MAVEN_HOME` environment variable to the
-   installation path.
-2. Download and install the [JavaFX runtime](https://gluonhq.com/products/javafx/).  Set the `JAVAFX_HOME`
-   environment variable to the installation path.
-   
-If building native executables, the following dependencies are also required:
+To build a native application for your operating system, run `mvn clean install`.  This will generate an installer
+appropriate for your system, such as an MSI on Windows.
 
-1. Ensure all prerequisites for your target platform(s) are satisfied: https://docs.gluonhq.com/#_platforms
-2. Download and install [GraalVM](https://www.graalvm.org/).  Set the `GRAALVM_HOME`
-   environment variable to the installation path.
+### Official Releases
 
-### Option 1 - Eclipse
-
-J3 can be launched directly from Eclipse.  First, create a new Eclipse project from the J3 source code.
-Then, right-click on `src/main/java/j3/GUI.java` and run as a Java Application.
-
-Under VM arguments, add:
-
-```
---module-path ${JAVAFX_HOME}\lib --add-modules javafx.controls
-```
-
-Apply the changes and run the application.
-
-### Option 2 - Maven
-
-On Windows, we use the Visual Studio Developer Command Prompt to build J3 as it requires a compiler/linker:
-
-```
-"C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvars64.bat"
-
-set MAVEN_HOME=C:\apache-maven-3.8.6
-set JAVA_HOME=C:\Program Files\Eclipse Adoptium\jdk-18.0.2.101-hotspot
-set GRAALVM_HOME=C:\graalvm-svm-java17-windows-gluon-22.1.0.1-Final
-set PATH=%MAVEN_HOME%\bin;%JAVA_HOME%\bin;%PATH%
-
-mvn clean
-mvn gluonfx:build         # Compile J3
-mvn gluonfx:run           # Launch J3
-```
-
-### Option 3 - Native Executable
-
-Following the same steps above to build J3 using Maven, run:
-
-```
-mvn gluonfx:nativerun     # Run the native version of J3
-mvn gluonfx:package       # Package J3 into an installer
-```
-
-Note: Some functionality is not supported for native executables, including the Camera and Animation widgets.
+We also provide periodic releases that include the native programs for the major operating systems.  See the 
+Releases page for more details.
 
 ## FAQ
 
